Added new functionality Added option to delete and edit authors. Also now the author option for books will take authors from the file 'authors.txt'.

--- a/styles.css
+++ b/styles.css
@@ -81,11 +81,12 @@ a {
 }
 
 #input-form .input-cell {
+    width: 15rem;
     line-height: 1.9rem;
 }
 
 #input-form .button-cell {
-    width: 19rem; /** same as input */
+    width: 19rem;
     text-align: right;
     padding-top: 2rem;
 }
